@@ -1,5 +1,7 @@
 version 2022b, in progress
 - new command/keyword "continue" for use in loops
+- new function commute(): pre/post multiplication by the
+  commutation operator
 - new option --decr for use with index loops
 - "leverage" command: add $result accessor to obtain 
   leverage, influence and studentized residuals as matrix
